Added plain text acceptance test

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,20 @@
   </head> 
 
   <body>
-    <div>
+    <div class="header">
       <h2>Info Header</h2>
     </div>
     
-    <div>
-      Table? List?
+    <div class="bathrooms">
+      <table class="table table-bordered">
+        <tr>
+          <th>Bathroom</th>
+        </tr>
+      </table>  
     </div>
 
-    <div>
-      Button
+    <div class="logg-it">
+      <button class="btn btn-primary" id="logg_it" name="Logg It">Logg It!</button>
     </div>
 
   </body>
